@@ -1,6 +1,6 @@
 .. _1.7.1:
 
-GammaLib 1.7.1 release (22 July 2020)
+GammaLib 1.7.1 release (29 July 2020)
 =====================================
 
 Overview
@@ -10,6 +10,8 @@ GammaLib 1.7.1 is a bug fix release for GammaLib release 1.7.
 
 The following bugs were fixed:
 
+* [`3287 <https://cta-redmine.irap.omp.eu/issues/3287>`_] -
+  Make parameter file reading and writing thread safe
 * [`3280 <https://cta-redmine.irap.omp.eu/issues/3280>`_] -
   Add quotes to sky region names
 * [`3279 <https://cta-redmine.irap.omp.eu/issues/3279>`_] -
